# clouder-core

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pytest.ini  requirements-dev.txt  requirements-lambda.txt
experiments/artists/: .env.example  README.md  fixtures.yaml  pyproject.toml
experiments/artists/src/artlab/: __main__.py  aggregate.py  cli.py  config.py  fixtures.py  report.py  runner.py  schemas.py
experiments/artists/src/artlab/prompts/: __init__.py
experiments/artists/src/artlab/vendors/: __init__.py  anthropic_claude.py  base.py  gemini_flash.py  pricing.py  tavily_deepseek.py
experiments/artists/tests/: conftest.py  test_aggregate.py  test_config.py  test_fixtures_loader.py  test_pricing.py  test_prompts.py  test_report.py  test_runner.py  test_schemas.py  test_vendor_anthropic.py  test_vendor_gemini.py  test_vendor_grok.py  test_vendor_kimi.py  test_vendor_openai.py  test_vendor_perplexity.py  test_vendor_tavily_deepseek.py
experiments/enrichment_split/: .gitignore  README.md  pyproject.toml
experiments/enrichment_split/sample/: sample.yaml
experiments/enrichment_split/src/splitlab/: cli.py  config.py  facts_pass.py  merge.py  metrics.py  narrative_pass.py  pull_sample.py  report.py  runner.py  sample.py  schemas.py  social_regex.py  tavily_client.py
experiments/enrichment_split/tests/: test_config.py  test_facts_pass.py  test_merge.py  test_metrics.py  test_narrative_pass.py  test_pull_sample.py  test_report.py  test_runner.py  test_sample.py  test_schemas.py  test_social_regex.py  test_tavily_client.py
experiments/labels/: .env.example  .gitignore  README.md  fixtures.yaml  pyproject.toml
experiments/labels/src/lab/: __main__.py  aggregate.py  cli.py  config.py  report.py  runner.py  schemas.py
experiments/labels/src/lab/prompts/: __init__.py  label_v1_baseline.py  label_v3_ai_focus.py  label_v3_app_fields.py
experiments/labels/tests/: conftest.py  test_aggregate.py  test_cli.py  test_config.py  test_fixtures_loader.py  test_pricing.py  test_prompts.py  test_report.py  test_runner.py  test_schemas.py  test_vendor_anthropic.py  test_vendor_gemini.py  test_vendor_grok.py  test_vendor_kimi.py  test_vendor_openai.py  test_vendor_perplexity.py  test_vendor_tavily_deepseek.py
(+1334 files in other folders)
