[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clouder-artist-lab"
version = "0.1.0"
description = "Local sandbox for comparing AI vendors/prompts on artist enrichment"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39",
    "openai>=1.40",
    "google-genai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
artlab = "artlab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
