[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clouder-enrichment-split-lab"
version = "0.1.0"
description = "Sandbox: two-pass enrichment (OpenAI narrative + Tavily facts) vs prod baseline"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "openai>=1.60",
  "pyyaml>=6.0",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
splitlab = "splitlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
